@@ -3,6 +3,9 @@ detailled list of changes, please see ChangeLog.
 
 1.11.1 (UNRELEASED)
 -------------------
+Improvements:
+ - launchpad.py: Add options 'escalation_subscription' and 'escalation_tag' for
+   handling bugs with more than 10 duplicates.
 Bug fixes:
  - launchpad.py: Drop APPORT_FILES whitelist for download() and instead just
    filter out file extensions that we know about (*.txt and *.gz).
